--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -1,17 +1,35 @@
-name: FossID Repository Scanning
+## This workflow runs any time code is pushed to a branch.
+## By doing so, Branches always have up-to-date results in Workbench.
 
+name: Update Branch Scan
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    branches:
+      - 'develop'
 
 jobs:
-  build:
+  workbench-scan:
     runs-on: ubuntu-latest
-
+    env:
+      WORKBENCH_URL: ${{ secrets.WORKBENCH_URL }}
+      WORKBENCH_USER: ${{ secrets.WORKBENCH_USER }}
+      WORKBENCH_TOKEN: ${{ secrets.WORKBENCH_TOKEN }}
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Run a sample script on PR merge
-      if: github.event.pull_request.merged == true
-      run: echo "This is a sample script that runs when a PR is merged."
+    - name: Scan by Cloning from Git
+      run: |
+        docker run ghcr.io/tomgonzo/workbench-cli:latest \
+        --api-url ${{ env.WORKBENCH_URL }} \
+        --api-user ${{ env.WORKBENCH_USER }} \
+        --api-token ${{ env.WORKBENCH_TOKEN }} \
+        scan-git \
+        --project-name $GITHUB_REPOSITORY_OWNER \
+        --scan-name $GITHUB_REPOSITORY \
+        --git-url $GITHUB_SERVER_URL/$GITHUB_REPOSITORY \
+        --git-branch $GITHUB_REF_NAME \
+        --git-depth 1 \
+        --id-reuse \
+        --id-reuse-type project \
+        --id-reuse-source $GITHUB_REPOSITORY_OWNER \
+        --run-dependency-analysis \
+        --delta-scan \
+        --no-wait
